// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadVideo Component fetches conversions.json on mount 1`] = `
<DocumentFragment>
  <div
    class="container w-full mx-auto py-8"
  >
    <div
      class="flex flex-col items-center justify-center w-3/4 sm:w-2/3 h-48 md:h-64 mx-auto bg-teal-50 p-8 rounded-lg border-dashed border-4 border-teal-400"
    >
      <div
        class="relative w-full uploadvideo uploadvideos sm:w-3/5 md-custom:w-3/5 lg:w-2/5 h-1/2 bg-teal-500 rounded-lg shadow-lg flex items-center justify-between px-6"
      >
        <svg
          class="text-white hidden sm:block md:text-2xl lg:text-4xl cursor-pointer"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 576 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zm48 96a144 144 0 1 1 0 288 144 144 0 1 1 0-288zm16 80c0-8.8-7.2-16-16-16s-16 7.2-16 16v48H368c-8.8 0-16 7.2-16 16s7.2 16 16 16h48v48c0 8.8 7.2 16 16 16s16-7.2 16-16V384h48c8.8 0 16-7.2 16-16s-7.2-16-16-16H448V304z"
          />
        </svg>
        <span
          class="uploaded text-white text-center text-sm sm:text-lg lg:text-xl xl:text-2xl ml-4 lg:ml-0 pr-2 font-semibold cursor-pointer"
        >
          Choose Files
        </span>
        <div
          class="h-20 w-0.5 md:block hidden bg-teal-400"
        />
        <svg
          class="text-white hidden sm:block md:text-2xl lg:text-4xl cursor-pointer"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm289.1-43.4c7.5-7.5 19.8-7.5 27.3 0 3.8 3.8 5.6 8.7 5.6 13.6s-1.9 9.9-5.7 13.7l-94.3 94c-7.6 6.9-19.3 6.7-26.6-.6l-95.7-95.4c-7.5-7.5-7.6-19.7 0-27.3 7.5-7.5 19.7-7.6 27.3 0l81.1 81.9 81-79.9z"
          />
        </svg>
      </div>
      <p
        class="text-center text-xs md:text-base text-gray-500"
      >
        Max file size 1GB. 
        <button
          class="underline underline-offset-2"
        >
          Sign up
        </button>
         for more
      </p>
      <p
        class="text-center text-gray-500 mt-auto text-xs"
      >
        *Limit 5 conversions/day
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UploadVideo Component handles file upload 1`] = `
<DocumentFragment>
  <div
    class="container w-full mx-auto py-8"
  >
    <div
      class="w-11/12 md:w-5/6 lg:2/3 m-4 md:m-auto bg-white p-8 rounded-lg shadow-lg"
    >
      <div
        class="flex flex-col md:flex-row items-center justify-between mb-4"
      >
        <span
          class="uploaded uploads text-teal-800 mb-4 md:mb-0 text-sm sm:text-lg lg:text-2xl xl:text-3xl font-semibold"
        >
          Uploaded Videos
        </span>
        <div
          class="addMoreFiles uploadvideos relative w-3/5 lg:w-3/6 xl:w-2/5 h-1/2 bg-teal-500 rounded-lg shadow-lg z-10 flex items-center justify-between px-6"
        >
          <svg
            class="text-white hidden sm:block sm:text-xl md:text-2xl lg:text-4xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zm48 96a144 144 0 1 1 0 288 144 144 0 1 1 0-288zm16 80c0-8.8-7.2-16-16-16s-16 7.2-16 16v48H368c-8.8 0-16 7.2-16 16s7.2 16 16 16h48v48c0 8.8 7.2 16 16 16s16-7.2 16-16V384h48c8.8 0 16-7.2 16-16s-7.2-16-16-16H448V304z"
            />
          </svg>
          <span
            class="uploaded uploads text-white text-center text-sm py-4 md:py-0 sm:text-lg lg:text-2xl ml-4 lg:ml-0 font-semibold cursor-pointer"
          >
            Add More Files
          </span>
          <div
            class="h-20 w-0.5 md:block hidden bg-teal-400"
          />
          <svg
            class="text-white hidden sm:block sm:text-xl md:text-2xl lg:text-4xl cursor-pointer"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm289.1-43.4c7.5-7.5 19.8-7.5 27.3 0 3.8 3.8 5.6 8.7 5.6 13.6s-1.9 9.9-5.7 13.7l-94.3 94c-7.6 6.9-19.3 6.7-26.6-.6l-95.7-95.4c-7.5-7.5-7.6-19.7 0-27.3 7.5-7.5 19.7-7.6 27.3 0l81.1 81.9 81-79.9z"
            />
          </svg>
        </div>
      </div>
      <ul>
        <li
          class="flex flex-col gap-4 sm:gap-0 sm:flex-row justify-between items-center m-px border w-full py-4 px-4 border-gray-300"
        >
          <div
            class="flex flex-col gap-4 sm:gap-0 sm:flex-row w-full sm:w-5/6"
          >
            <div
              class="flex flex-col w-full items-center sm:items-start justify-center sm:justify-start sm:w-2/3"
            >
              <span
                class="text-teal-800 text-sm md:text-base lg:text-xl font-semibold"
              >
                video.mp4
              </span>
              <span
                class="text-gray-500 text-xs md:text-sm lg:text-lg sm:ml-2"
              >
                1610612736
              </span>
            </div>
            <div
              class="flex items-center text-sm lg:text-lg justify-center sm:justify-end w-full sm:w-1/3 mt-2 sm:mt-0"
            >
              <p
                class="text-xs md:text-sm lg:text-lg pr-2 text-gray-500"
              >
                Output:
              </p>
              <div
                class=" css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-2-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-1cu9sq8-control"
                >
                  <div
                    class=" css-16674sh-Component"
                  >
                    <div
                      class=" css-1dimb5e-singleValue"
                    >
                      MP4
                    </div>
                    <div
                      class=" css-d9r47t-Component"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="react-select-2-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-ny0e4k-Component"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between gap-2 mt-2 sm:mt-0"
          >
            <div>
              <button
                class="mr-2"
                title="Settings"
              >
                <svg
                  class=" text-2xl md:text-xl lg:text-3xl text-gray-500 hover:text-teal-500 transform hover:scale-110 transition transition-colors duration-300"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 16 16"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"
                  />
                </svg>
              </button>
            </div>
            <button
              title="Delete"
            >
              <svg
                class="text-xl md:text-xl lg:text-2xl text-gray-500 hover:text-red-600 transform hover:scale-110 transition transition-colors duration-300"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
      <div
        class="flex justify-between items-center mt-8"
      >
        <span
          class="text-gray-600 text-xs md:text-sm lg:text-lg"
        >
          1 videos uploaded
        </span>
        <p
          class="text-center text-gray-500 mt-auto text-xs"
        >
          *Limit 5 conversions/day
        </p>
        <button
          class="bg-teal-800 hover:bg-teal-600 text-white text-xs md:text-sm lg:text-lg font-bold py-2 px-4 lg:px-8"
        >
          Convert
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UploadVideo Component handles video conversion 1`] = `
<DocumentFragment>
  <div
    class="container w-full mx-auto py-8"
  >
    <div
      class="w-11/12 md:w-5/6 lg:2/3 m-4 md:m-auto bg-white p-8 rounded-lg shadow-lg"
    >
      <div
        class="flex flex-col md:flex-row items-center justify-between mb-4"
      >
        <span
          class="uploaded uploads text-teal-800 mb-4 md:mb-0 text-sm sm:text-lg lg:text-2xl xl:text-3xl font-semibold"
        >
          Uploaded Videos
        </span>
        <div
          class="addMoreFiles uploadvideos relative w-3/5 lg:w-3/6 xl:w-2/5 h-1/2 bg-teal-500 rounded-lg shadow-lg z-10 flex items-center justify-between px-6"
        >
          <svg
            class="text-white hidden sm:block sm:text-xl md:text-2xl lg:text-4xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zm48 96a144 144 0 1 1 0 288 144 144 0 1 1 0-288zm16 80c0-8.8-7.2-16-16-16s-16 7.2-16 16v48H368c-8.8 0-16 7.2-16 16s7.2 16 16 16h48v48c0 8.8 7.2 16 16 16s16-7.2 16-16V384h48c8.8 0 16-7.2 16-16s-7.2-16-16-16H448V304z"
            />
          </svg>
          <span
            class="uploaded uploads text-white text-center text-sm py-4 md:py-0 sm:text-lg lg:text-2xl ml-4 lg:ml-0 font-semibold cursor-pointer"
          >
            Add More Files
          </span>
          <div
            class="h-20 w-0.5 md:block hidden bg-teal-400"
          />
          <svg
            class="text-white hidden sm:block sm:text-xl md:text-2xl lg:text-4xl cursor-pointer"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm289.1-43.4c7.5-7.5 19.8-7.5 27.3 0 3.8 3.8 5.6 8.7 5.6 13.6s-1.9 9.9-5.7 13.7l-94.3 94c-7.6 6.9-19.3 6.7-26.6-.6l-95.7-95.4c-7.5-7.5-7.6-19.7 0-27.3 7.5-7.5 19.7-7.6 27.3 0l81.1 81.9 81-79.9z"
            />
          </svg>
        </div>
      </div>
      <ul>
        <li
          class="flex flex-col gap-4 sm:gap-0 sm:flex-row justify-between items-center m-px border w-full py-4 px-4 border-gray-300"
        >
          <div
            class="flex flex-col gap-4 sm:gap-0 sm:flex-row w-full sm:w-5/6"
          >
            <div
              class="flex flex-col w-full items-center sm:items-start justify-center sm:justify-start sm:w-2/3"
            >
              <span
                class="text-teal-800 text-sm md:text-base lg:text-xl font-semibold"
              >
                large_video.mp4
              </span>
              <span
                class="text-gray-500 text-xs md:text-sm lg:text-lg sm:ml-2"
              >
                1610612736
              </span>
            </div>
            <div
              class="flex items-center text-sm lg:text-lg justify-center sm:justify-end w-full sm:w-1/3 mt-2 sm:mt-0"
            >
              <p
                class="text-xs md:text-sm lg:text-lg pr-2 text-gray-500"
              >
                Output:
              </p>
              <div
                class=" css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-4-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-1cu9sq8-control"
                >
                  <div
                    class=" css-16674sh-Component"
                  >
                    <div
                      class=" css-1dimb5e-singleValue"
                    >
                      MP4
                    </div>
                    <div
                      class=" css-d9r47t-Component"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="react-select-4-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-ny0e4k-Component"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between gap-2 mt-2 sm:mt-0"
          >
            <div>
              <button
                class="mr-2"
                title="Settings"
              >
                <svg
                  class=" text-2xl md:text-xl lg:text-3xl text-gray-500 hover:text-teal-500 transform hover:scale-110 transition transition-colors duration-300"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 16 16"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"
                  />
                </svg>
              </button>
            </div>
            <button
              title="Delete"
            >
              <svg
                class="text-xl md:text-xl lg:text-2xl text-gray-500 hover:text-red-600 transform hover:scale-110 transition transition-colors duration-300"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
      <div
        class="flex justify-between items-center mt-8"
      >
        <span
          class="text-gray-600 text-xs md:text-sm lg:text-lg"
        >
          1 videos uploaded
        </span>
        <p
          class="text-center text-gray-500 mt-auto text-xs"
        >
          *Limit 5 conversions/day
        </p>
        <button
          class="bg-teal-800 hover:bg-teal-600 text-white text-xs md:text-sm lg:text-lg font-bold py-2 px-4 lg:px-8"
        >
          Convert
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UploadVideo Component removes video from the list 1`] = `
<DocumentFragment>
  <div
    class="container w-full mx-auto py-8"
  >
    <div
      class="w-11/12 md:w-5/6 lg:2/3 m-4 md:m-auto bg-white p-8 rounded-lg shadow-lg"
    >
      <div
        class="flex flex-col md:flex-row items-center justify-between mb-4"
      >
        <span
          class="uploaded uploads text-teal-800 mb-4 md:mb-0 text-sm sm:text-lg lg:text-2xl xl:text-3xl font-semibold"
        >
          Uploaded Videos
        </span>
        <div
          class="addMoreFiles uploadvideos relative w-3/5 lg:w-3/6 xl:w-2/5 h-1/2 bg-teal-500 rounded-lg shadow-lg z-10 flex items-center justify-between px-6"
        >
          <svg
            class="text-white hidden sm:block sm:text-xl md:text-2xl lg:text-4xl"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 576 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384v38.6C310.1 219.5 256 287.4 256 368c0 59.1 29.1 111.3 73.7 143.3c-3.2 .5-6.4 .7-9.7 .7H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zm48 96a144 144 0 1 1 0 288 144 144 0 1 1 0-288zm16 80c0-8.8-7.2-16-16-16s-16 7.2-16 16v48H368c-8.8 0-16 7.2-16 16s7.2 16 16 16h48v48c0 8.8 7.2 16 16 16s16-7.2 16-16V384h48c8.8 0 16-7.2 16-16s-7.2-16-16-16H448V304z"
            />
          </svg>
          <span
            class="uploaded uploads text-white text-center text-sm py-4 md:py-0 sm:text-lg lg:text-2xl ml-4 lg:ml-0 font-semibold cursor-pointer"
          >
            Add More Files
          </span>
          <div
            class="h-20 w-0.5 md:block hidden bg-teal-400"
          />
          <svg
            class="text-white hidden sm:block sm:text-xl md:text-2xl lg:text-4xl cursor-pointer"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 512 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M48 256c0 114.9 93.1 208 208 208s208-93.1 208-208S370.9 48 256 48 48 141.1 48 256zm289.1-43.4c7.5-7.5 19.8-7.5 27.3 0 3.8 3.8 5.6 8.7 5.6 13.6s-1.9 9.9-5.7 13.7l-94.3 94c-7.6 6.9-19.3 6.7-26.6-.6l-95.7-95.4c-7.5-7.5-7.6-19.7 0-27.3 7.5-7.5 19.7-7.6 27.3 0l81.1 81.9 81-79.9z"
            />
          </svg>
        </div>
      </div>
      <ul>
        <li
          class="flex flex-col gap-4 sm:gap-0 sm:flex-row justify-between items-center m-px border w-full py-4 px-4 border-gray-300"
        >
          <div
            class="flex flex-col gap-4 sm:gap-0 sm:flex-row w-full sm:w-5/6"
          >
            <div
              class="flex flex-col w-full items-center sm:items-start justify-center sm:justify-start sm:w-2/3"
            >
              <span
                class="text-teal-800 text-sm md:text-base lg:text-xl font-semibold"
              >
                large_video.mp4
              </span>
              <span
                class="text-gray-500 text-xs md:text-sm lg:text-lg sm:ml-2"
              >
                1610612736
              </span>
            </div>
            <div
              class="flex items-center text-sm lg:text-lg justify-center sm:justify-end w-full sm:w-1/3 mt-2 sm:mt-0"
            >
              <p
                class="text-xs md:text-sm lg:text-lg pr-2 text-gray-500"
              >
                Output:
              </p>
              <div
                class=" css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-3-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-1cu9sq8-control"
                >
                  <div
                    class=" css-16674sh-Component"
                  >
                    <div
                      class=" css-1dimb5e-singleValue"
                    >
                      MP4
                    </div>
                    <div
                      class=" css-d9r47t-Component"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="react-select-3-input"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-ny0e4k-Component"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between gap-2 mt-2 sm:mt-0"
          >
            <div>
              <button
                class="mr-2"
                title="Settings"
              >
                <svg
                  class=" text-2xl md:text-xl lg:text-3xl text-gray-500 hover:text-teal-500 transform hover:scale-110 transition transition-colors duration-300"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 16 16"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"
                  />
                </svg>
              </button>
            </div>
            <button
              title="Delete"
            >
              <svg
                class="text-xl md:text-xl lg:text-2xl text-gray-500 hover:text-red-600 transform hover:scale-110 transition transition-colors duration-300"
                fill="currentColor"
                height="1em"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                />
              </svg>
            </button>
          </div>
        </li>
      </ul>
      <div
        class="flex justify-between items-center mt-8"
      >
        <span
          class="text-gray-600 text-xs md:text-sm lg:text-lg"
        >
          1 videos uploaded
        </span>
        <p
          class="text-center text-gray-500 mt-auto text-xs"
        >
          *Limit 5 conversions/day
        </p>
        <button
          class="bg-teal-800 hover:bg-teal-600 text-white text-xs md:text-sm lg:text-lg font-bold py-2 px-4 lg:px-8"
        >
          Convert
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UploadVideo Component renders upload form initially 1`] = `<DocumentFragment />`;
